--- a/deployment.yml
+++ b/deployment.yml
@@ -71,9 +71,15 @@ spec:
             limits:
               cpu: 250m
               memory: 256Mi
+          volumeMounts:
+            - name: product-data
+              mountPath: /app/data/
           ports:
             - containerPort: 8080
               name: http
+      volumes:
+        - name: product-data
+          emptyDir: {}
 ---
 apiVersion: v1
 kind: Service
